# LearnQt

./: .clang-tidy  .gitignore  CMakeLists.txt  make.ps1
cmake/: CMakeLists.txt  addtarget.cmake  findqt.cmake  sanitize.cmake
mainwindow/: CMakeLists.txt
mainwindow/include/mainwindow/: mainwindow.h  mainwindow.hpp
mainwindow/qrc/: res.qrc
mainwindow/src/: main.cpp  mainwindow.cpp
mainwindow/ui/: mainwindow.ui
painter/: CMakeLists.txt
painter/include/painter/: widget.hpp
painter/src/: main.cpp  widget.cpp
painter/ui/: widget.ui
test/: CMakeLists.txt
test/src/: test.cpp
